Fix submit button for small screens
The text in the submit button was overflowing the button borders on
phone-sized screens. This commit fixes that.

--- a/public/smokeAlarmPortal_files/base.css
+++ b/public/smokeAlarmPortal_files/base.css
@@ -160,7 +160,8 @@ body {
 #singlebutton {
     font-size: 1.2em;
     border: 3px solid #EEE;
-    width: 100%;
+    padding-left: 1.5em;
+    padding-right: 1.5em;
 }
 
 /* Select dropdowns don't support placeholder text directly in HTML,
